envio currículo com script javascript

--- a/03_AUT_EST_ENTREGA/Semana 3/frontend/index.html
+++ b/03_AUT_EST_ENTREGA/Semana 3/frontend/index.html
@@ -56,6 +56,8 @@
 				<li>Eletiva de Introdução a Inteligência Artificial</li>
 				<li>Eletiva de Nanotecnologia</li>
 				<li>Eletiva de Ciência Forense</li>
+				<li id="new-line"></li>
+				<script src="script.js"></script>
 			</ul>
 		</div>
 	</div>
