--- a/02_TUTORIAL/Semana 3/frontend/index.html
+++ b/02_TUTORIAL/Semana 3/frontend/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 	<meta charset="UTF-8" />	
-	<title>Etapa 3</title>
+	<title>Etapa 4</title>
 	<link rel="stylesheet" href="style.css"/>
 	<script src="script.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
 	<div id="main">
-		<h1>ETAPA 3</h1>
-		Introdução a Javascript
+		<h1>ETAPA 4</h1>
+		Introdução a Jquery
 			<div id="calc" class="sections">
 				<h3>PARTE 1 - Cálculos</h3>
 				Cálculos realizados e respectivos resultados obtidos:
