adição exercício obrigatório semana 5

--- a/04_AUT_EST_EX_OBRIGATORIOS/Semana 5/index.html
+++ b/04_AUT_EST_EX_OBRIGATORIOS/Semana 5/index.html
@@ -56,7 +56,7 @@
                 <input type="number" id ="focus"/>
                 <button onclick="order()">Ordenar</button>
                 <br/>
-                <p id="lista"></p>
+                <p id="list"></p>
                 <p id="value"></p>
             </div>
             <button onclick="reset()">Resetar tudo</button>
